The first version of the manual is ready.

--- a/docs/manual.bib
+++ b/docs/manual.bib
@@ -378,18 +378,6 @@ J. L. Marroquin},
   publisher={Springer}
 }
 
-@inproceedings{KrylovLPP08,
-  author    = {Vladimir Krylov and
-               Andrey Logvinov and
-               Alexander Ponomarenko and
-               Dmitry Ponomarev},
-  title     = {Metrized Small World Properties Based Data Structure},
-  booktitle = {SEDE},
-  year      = {2008},
-  pages     = {203-208},
-  bibsource = {DBLP, http://dblp.uni-trier.de}
-}
-
 @inproceedings{cayton2009efficient,
   title={Efficient Bregman range search},
   author={Cayton, Lawrence},
@@ -607,4 +595,45 @@ author = "V.M. Velichko and N.G. Zagoruyko"
   author={Naidan, Bilegsaikhan and Boytsov, Leonid and Nyberg, Eric},
   journal={arXiv preprint arXiv:1506.03163},
   year={2015}
+}
+
+@inproceedings{Fagin2003,
+ author = {Fagin, Ronald and Kumar, Ravi and Sivakumar, D.},
+ title = {Efficient Similarity Search and Classification via Rank Aggregation},
+ booktitle = {Proceedings of the 2003 ACM SIGMOD International Conference on Management of Data},
+ series = {SIGMOD '03},
+ year = {2003}, 
+ isbn = {1-58113-634-X},
+ location = {San Diego, California},
+ pages = {301--312},
+ numpages = {12}, 
+ url = {http://doi.acm.org/10.1145/872757.872795},
+ doi = {10.1145/872757.872795}, 
+ acmid = {872795},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}  
+
+@inproceedings{ponomarenko2014comparative,
+  title={Comparative Analysis of Data Structures for Approximate Nearest Neighbor Search},
+  author={Ponomarenko, Alexander and Avrelin, Nikita and Naidan, Bilegsaikhan and Boytsov, Leonid},
+  booktitle={DATA ANALYTICS 2014, The Third International Conference on Data Analytics},
+  pages={125--130},
+  year={2014}
+}
+
+@inproceedings{rehurek_lrec,
+  title = {{Software Framework for Topic Modelling 
+            with Large Corpora}},
+  author = {Radim {\v R}eh{\r u}{\v r}ek and Petr Sojka},
+  booktitle = {{Proceedings of the LREC 2010 Workshop on New
+                Challenges for NLP Frameworks}},
+  pages = {45--50},
+  year = 2010,
+  month = May,
+  day = 22,
+  publisher = {ELRA},
+  address = {Valletta, Malta},
+  note={\url{http://is.muni.cz/publication/884893/en}},
+  language={English}
 }
